<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/title_settings_appearance">
        <ListPreference
            app:key="theme"
            app:title="@string/subtitle_settings_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_settings_accessibility">
        <ListPreference
            app:key="language"
            app:title="@string/subtitle_settings_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="fr" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>