<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/mdi__account"
        android:iconTint="?attr/colorOnSurface"
        android:title="@string/title_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/title_settings"
        android:icon="@drawable/mdi__settings"
        android:iconTint="?attr/colorOnSurface"
        app:showAsAction="never" />

    <item
        android:id="@+id/bookmarks"
        android:title="@string/title_bookmarks"
        android:icon="@drawable/ic_bookmark_filled_24dp"
        android:iconTint="?attr/colorOnSurface"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/activity_login_logout"
        android:icon="@drawable/mdi__logout"
        android:iconTint="?attr/colorOnSurface"
        app:showAsAction="never" />

</menu>