<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorSurface">

    <!-- Post Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/activity_main_post_avatar_desc"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            android:src="@android:drawable/sym_def_app_icon" />
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpPostImages"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:clickable="false"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/activity_main_post_desc_like"
                android:src="@drawable/ic_favorite_border_24dp"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/iv_comment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/activity_main_post_desc_comment"
                android:src="@drawable/ic_chat_bubble_border_24dp"
                app:tint="?attr/colorOnSurface" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/activity_main_post_desc_share"
                android:src="@drawable/ic_share_border_24dp"
                app:tint="?attr/colorOnSurface" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/activity_main_post_desc_bookmark"
                android:src="@drawable/ic_bookmark_border_24dp"
                app:tint="?attr/colorOnSurface" />

        </LinearLayout>

        <!-- Likes -->
        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/activity_main_post_likes"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp" />

        <!-- Caption -->
        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/activity_main_post_likes"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>